--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Babel==2.13.0
-matplotlib==3.7.1
-pandas==2.0.3
-seaborn==0.13.0
-streamlit==1.27.2
+streamlit>=1.28.0
+pandas>=1.5.0
+numpy>=1.21.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+openpyxl>=3.0.0
+babel>=2.9.1
